--- a/discord.gg_deadboys.htm
+++ b/discord.gg_deadboys.htm
@@ -31,7 +31,7 @@
             font-family: 'Spectral', serif;
             font-weight: bold;
             font-size: 3rem;
-            background: linear-gradient(90deg, #45caff, #07c24f);
+            background: linear-gradient(90deg, #45ff4e, #07c24f);
             -webkit-background-clip: text;
             color: transparent;
             letter-spacing: 0.1em;
@@ -42,7 +42,7 @@
             font-weight: bold;
             font-size: 1.8rem;
             color: #fff;
-            background: linear-gradient(90deg, #45caff, #02c432);
+            background: linear-gradient(90deg, #45ff6d, #02c432);
             -webkit-background-clip: text;
             color: transparent;
             letter-spacing: 0.04em;
@@ -78,14 +78,13 @@
 </head>
 <body>
     <div class="container">
-        <img src="./642-exe.github.io_files/khD1gTr(1).gif" width="500" height="250">
+        <img src="https://images-ext-1.discordapp.net/external/r2fEoI-fzW2sN38dNdH0_GwPp-b4IbbQaA8MdlwbQP4/https/auto.creavite.co/api/out/RLhBI20ZPAUCskkp08_standard.gif" width="500" height="250">
         <br><br><br>
-        <div class="title">hacked By M7md \ الزعابي </div>
+        <div class="title">You Server Got Down By DeadBoys Group </div>
         <div class="subtitle">were here</div>
-        <div class="subtitle"><a href="./642-exe.github.io_files/llll" class="no-link"> Discord.gg/llll</a></div><a href="./642-exe.github.io_files/llll" class="no-link">
-        <div class="subtitle">LOL     better patch your security up </div>
+        <div class="subtitle"><a href="./642-exe.github.io_files/llll" class="no-link"> Discord.gg/deadboys</a></div><a href="./642-exe.github.io_files/llll" class="no-link">
+        <div class="subtitle">     By Psycho \\ NoT FalCon </div>
         <br><br><br>
-        <img src="./642-exe.github.io_files/llll" width="180" height="60" style="object-fit: scale-down; max-width: 100%" alt="Footer Image">
     </a></div><a href="./642-exe.github.io_files/llll" class="no-link">
 
     <div style="display: none;">
